gccida/g2/reload_cse_regs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8663:4: error: expected ';' after expression
rtx last_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8663:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8667:4: error: expected ';' after expression
rtx v21; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8667:5: error: use of undeclared identifier 'v21'
rtx v21; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8675:1: error: use of undeclared identifier '$46E27178171750CEF28E8B43DEBEAD96'
$46E27178171750CEF28E8B43DEBEAD96 *v29; // rdx 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8675:36: error: use of undeclared identifier 'v29'
$46E27178171750CEF28E8B43DEBEAD96 *v29; // rdx 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8686:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8686:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8687:4: error: expected ';' after expression
rtx v41; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8687:5: error: use of undeclared identifier 'v41'
rtx v41; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8688:4: error: expected ';' after expression
rtx v42; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8688:5: error: use of undeclared identifier 'v42'
rtx v42; // r8 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8709:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8709:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8710:4: error: expected ';' after expression
rtx v64; // r10 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8710:5: error: use of undeclared identifier 'v64'
rtx v64; // r10 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8712:4: error: expected ';' after expression
rtx v66; // r9 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8712:5: error: use of undeclared identifier 'v66'
rtx v66; // r9 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/reload1.c:8713:4: error: expected ';' after expression
rtx v67; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/reload_cse_regs/src/obj/reload1.o] Error 1
